Add harmless properties

--- a/configuration/environment.properties
+++ b/configuration/environment.properties
@@ -1,1 +1,46 @@
-db.password=test1234
+
+environment.name=Development
+environment.stage=4
+development=true
+host=localhost
+jboss.mgmt.user=admin
+jboss.mgmt.password=b14dd1e524c791e7db003d44
+jboss.remote.management.disabled=
+log.level=TRACE
+https.login.only=false
+log.hibernate.sql=DEBUG
+log.hibernate.values=TRACE
+test=true
+sap.password=init2010
+sap.wsdl.url=http://i60-ci.sap.db.de:8008/sap/bc/srt/xip/sap/zsi_masterdetailws_sync_in/800/zsi_masterdetailws_sync_in_i60_8/port1?wsdl
+
+APACHE_TARGET_HOME=/app/kolt/int/apache-2.4.10-inst1
+apache.ifDevServer=
+
+jbossws.password=ZT3HYHO3aByM+jFiN6ymQ\=
+pwkeystore.password=MASK-3qhh0scBEHoFK.E
+
+pwkeystore.salt=9834987234
+
+#ConfigurationforOracle
+db.uid=RIBN_ACCESS
+db.password=VAULT::oracle::password::1
+db.url=jdbc:oracle:thin:@database:1521:XE
+db.dm2ddl.auto=validate
+db.show.sql=false
+
+usehttpConnectorBegin=
+usehttpConnectorEnd=
+
+jboss.management.host=localhost
+jboss.management.port=9000
+
+#db.hibernate.statistics=true
+#db.hibernate.defaultschema=RIBN_OWNER
+
+ejb.statistics.disabled=
+external.host=${host}
+external.port=9004
+external.protocol=http
+loginPolicy=Anonymous
+#java.opts.extra=-Drebel.remoting_plugin=true -agentpath:$JBOSS_HOME_PATH/libjrebel64.so -agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n
