Add missing files

--- a/configuration/environment.properties
+++ b/configuration/environment.properties
@@ -1,10 +1,32 @@
+#
+# Legal Notice! DB Systel GmbH proprietary License!
+#
+# Copyright (C) 2017 DB Systel GmbH
+# DB Systel GmbH; Jürgen-Ponto-Platz 1; D-60329 Frankfurt am Main; Germany; http://www.dbsystel.de/
+#
+# This code is protected by copyright law and is the exclusive property of
+# DB Systel GmbH; Jürgen-Ponto-Platz 1; D-60329 Frankfurt am Main; Germany; http://www.dbsystel.de/
+#
+# Consent to use ("licence") shall be granted solely on the basis of a
+# written licence agreement signed by the customer and DB Systel GmbH. Any
+# other use, in particular copying, redistribution, publication or
+# modification of this code without written permission of DB Systel GmbH is
+# expressly prohibited.
+#
+# In the event of any permitted copying, redistribution or publication of
+# this code, no changes in or deletion of author attribution, trademark
+# legend or copyright notice shall be made.
+#
+
+#####
+# Configuration file for development environment on KOLT server (with Oracle DB).
 
 environment.name=Development
 environment.stage=4
 development=true
 host=localhost
 jboss.mgmt.user=admin
-jboss.mgmt.password=b14dd1e524c791e7db003d44
+jboss.mgmt.password=b14dd1e0368be522d4c791e7db003d44
 jboss.remote.management.disabled=
 log.level=TRACE
 https.login.only=false
@@ -17,10 +39,10 @@ sap.wsdl.url=http://i60-ci.sap.db.de:8008/sap/bc/srt/xip/sap/zsi_masterdetailws_
 APACHE_TARGET_HOME=/app/kolt/int/apache-2.4.10-inst1
 apache.ifDevServer=
 
-jbossws.password=ZT3HYHO3aByM+jFiN6ymQ\=
-pwkeystore.password=MASK-3qhh0scBEHoFK.E
+jbossws.password=ZT3HYHO3aByr17+ZrdaIWAgjUBtaUdRQEM+jFiN6ymQ\=
+pwkeystore.password=MASK-3qhh0sccyho0d6BEHoFK.E
 
-pwkeystore.salt=9834987234
+pwkeystore.salt=12345678
 
 #ConfigurationforOracle
 db.uid=RIBN_ACCESS
@@ -28,6 +50,7 @@ db.password=VAULT::oracle::password::1
 db.url=jdbc:oracle:thin:@database:1521:XE
 db.dm2ddl.auto=validate
 db.show.sql=false
+
 
 usehttpConnectorBegin=
 usehttpConnectorEnd=
